# mongodb_mcp

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/mongodb_mcp/: app.py  auth.py  connection.py  logging_config.py  server.py
src/mongodb_mcp/tools/: connection.py  crud.py  exploration.py  query.py
