[project]
name = "mongodb-mcp"
version = "0.1.0"
description = "MongoDB MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymongo>=4.6.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
